[project]
name = "rl"
version = "0.1.0"
description = "reinforcement learning testbed"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.2.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
]
